--- a/app.wxss
+++ b/app.wxss
@@ -1,11 +1,12 @@
 @import "miniprogram_npm/vant-weapp/common/index.wxss";
 
-Page{
-  color:#4A4A4A;
+Page {
+  color: #4a4a4a;
   font-size: 24rpx;
 }
 
 /* tabbar样式修正 */
-.van-hairline--top-bottom.van-hairline--top-bottom.van-tabbar.van-tabbar.van-tabbar--fixed.van-tabbar--fixed{
+
+.van-hairline--top-bottom.van-hairline--top-bottom.van-tabbar.van-tabbar.van-tabbar--fixed.van-tabbar--fixed {
   background-color: #353536;
 }
