--- a/pages/order/doing_search/doing_search.wxml
+++ b/pages/order/doing_search/doing_search.wxml
@@ -1,4 +1,4 @@
-<!-- 活动下单 -->
+<!-- 转销售 -->
 <view class="doing_search_page">
   <!-- 搜索 -->
   <view class="search_wrap van-hairline--surround flexCenter flexBetween">
