--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -37,16 +37,16 @@ Page {
 
 .nav {
   margin: 24rpx;
-  padding: 18rpx 12rpx;
-  height: 205rpx;
+  padding: 19rpx;
   box-sizing: border-box;
   border-radius: 12rpx;
+  flex-wrap: wrap;
 }
 
 .nav_item {
+  width: 324rpx;
+  height: 133rpx;
   background: url(https://cdn.s.bld365.com/getli_index_nav_bg.png) no-repeat center center/100% 100%;
-  margin: 8rpx;
-  flex: 1 0 0;
   color: #fff;
 }
 
@@ -57,6 +57,7 @@ Page {
 }
 
 .nav_title {
+  font-size: 25rpx;
 }
 
 /* 列表 */
@@ -70,7 +71,6 @@ Page {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
   margin-bottom: 160rpx;
 }
 
@@ -96,8 +96,8 @@ Page {
   flex: 1 0 0;
   font-size: 22rpx;
 }
-.list_item_count{
+
+.list_item_count {
   font-size: 34rpx;
   font-weight: bold;
 }
-
