--- a/pages/order/order_index/order_index.wxss
+++ b/pages/order/order_index/order_index.wxss
@@ -12,46 +12,35 @@ Page {
   overflow: hidden;
 }
 
-/* 类型 */
+/* 搜索 */
 
-.type {
-  margin-bottom: 24rpx;
-  padding-bottom: 27rpx;
+.search_wrap {
+  overflow: hidden;
+  position: relative;
+  z-index: 2;
 }
 
-.type_title {
-  font-size: 28rpx;
-  padding-left: 24rpx;
-  padding-right: 24rpx;
-  height: 100rpx;
+.search_content {
+  background-color: #f5f5f5;
+  border-radius: 5rpx;
+  height: 66rpx;
+  margin: 8rpx 24rpx;
+  padding-left: 19rpx;
+  padding-right: 19rpx;
+}
+.search_input{
+  flex: 1 0 0;
+  height: 100%;
+  padding-left: 16rpx;
 }
 
-.type_title_icon {
-  width: 36rpx;
-  height: 36rpx;
-  margin-right: 14rpx;
-}
-
-.type_item_wrap {
-  padding-left: 37rpx;
-  padding-right: 37rpx;
-}
-
-.type_item {
-  background: url(https://cdn.s.bld365.com/getli_index_nav_bg.png) no-repeat center center/100% 100%;
-  width: calc(50% - 25rpx);
-  height: 217rpx;
-  color: #fff;
-  font-size: 25rpx;
-}
-
-.type_item_icon {
-  width: 58rpx;
-  height: 58rpx;
-  margin-bottom: 18rpx;
-}
 
 /* 列表 */
+.list{
+  margin-top: -5rpx;
+  position: relative;
+  z-index: 1;
+}
 
 .list_title {
   height: 82rpx;
