--- a/utils/utils.wxss
+++ b/utils/utils.wxss
@@ -1,34 +1,48 @@
-.flex{
+.flex {
   display: flex;
 }
-.flexCenter{
+
+.flexCenter {
   display: flex;
   align-items: center;
 }
-.flexBetween{
+
+.flexBetween {
   display: flex;
   justify-content: space-between;
 }
-.flexJCenter{
+
+.flexJCenter {
   display: flex;
   justify-content: center;
 }
-.flexAround{
+
+.flexAround {
   display: flex;
   justify-content: space-around;
 }
-.flexColumn{
+
+.flexColumn {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.h100{
+
+.h100 {
   height: 100%;
 }
-.img100{
+
+.img100 {
   width: 100%;
   height: 100%;
+}
+
+.positionCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
 /* 省略三个点 */
@@ -39,6 +53,15 @@
   white-space: nowrap;
 }
 
-.bg_white{
+.bg_white {
   background-color: #fff;
+}
+
+.mask {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
 }
