--- a/utils/utils.wxss
+++ b/utils/utils.wxss
@@ -63,5 +63,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
+    z-index: 666;
 }
