--- a/pages/order/site_order_new/site_order_new.wxss
+++ b/pages/order/site_order_new/site_order_new.wxss
@@ -1,68 +1,85 @@
 @import '../../../utils/utils.wxss';
 
 Page {
+  height: 100%;
+  overflow: hidden;
   background-color: #f5f5f5;
 }
 
-.form {
-  background-color: #fff;
-  margin: 24rpx 0;
-  padding: 0 24rpx;
-}
-
-.form_item {
-  height: 88rpx;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 1px solid #e6e6e6;
-}
-
-.form_item:last-child {
-  border-bottom: none;
-}
-
-.form_item_label {
-  width: 110rpx;
-  text-align: justify;
-  text-align-last: justify;
-}
-
-.form_input {
-  flex: 1 0 0;
-  width: 0;
-  margin-left: 30rpx;
-}
-
-.form_input_input {
-  width: 100%;
+.renchou_page {
   height: 100%;
+  overflow-y: auto;
+  position: relative;
 }
 
-.form_input_placeholder {
-  color: #9b9b9b;
-}
-
-/* 标题 */
-
-.form_title {
-  justify-content: flex-start;
-  font-size: 28rpx;
+.item.title {
   color: #000;
 }
 
-.form_title_icon {
-  width: 6rpx;
-  height: 28rpx;
+.rect {
+  width: 12rpx;
+  height: 40rpx;
   background-color: #00a6ff;
   margin-right: 12rpx;
 }
 
-/* 下面按钮 */
+.container {
+  margin: 24rpx 0;
+  background-color: #fff;
+}
 
-.btn_submit {
+.item {
+  padding-left: 24rpx;
+  padding-right: 24rpx;
+  height: 84rpx;
+  border-bottom: 1rpx solid #d7d6d6;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+}
+
+.item:last-child {
+  border-bottom: none;
+}
+
+.label {
+  width: 139rpx;
+  color: #000;
+}
+
+.goodsLabel {
+  width: auto;
+}
+
+.input {
+  height: 100%;
+  flex: 1 0 0;
+  padding-left: 35rpx;
+}
+
+/* 导购员picker */
+
+.salerpicker_wrap {
+  height: 100%;
+  flex: 1 0 0;
+  width: 0;
+}
+
+.salerpicker {
+  /* height: 100%;
+  min-height: 100%; */
+  height: 84rpx;
+  padding-left: 35rpx;
+  display: flex;
+  align-items: center;
+}
+
+/* 按钮 */
+
+.btn {
   box-sizing: content-box;
-  background: linear-gradient(to bottom, #00a7ff, #0289fe);
+  background-color: #00a6ff;
+  color: #fff;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -71,35 +88,159 @@ Page {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
   font-size: 28rpx;
-  z-index: 1;
+  z-index: 10;
 }
 
-.btn_submit_active {
-  background: linear-gradient(to bottom, #0ca4f4, #0e89f3);
+.btn_active {
+  background-color: #0096e7;
 }
 
-.btn_submit.isX {
+.btn.isX {
   padding-bottom: 62rpx;
 }
 
-/* 结果modal */
+/* 二维码modal */
 
-.result_modal {
-  width: 604rpx;
-  height: 393rpx;
-  color: #000;
+.share-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
-.btn_result {
-  box-sizing: content-box;
-  background: linear-gradient(to bottom, #00a7ff, #0289fe);
-  width: 242rpx;
-  height: 72rpx;
+.code_modal {
+  width: 628rpx;
+  background-color: #fff;
+}
+
+.code_title {
+  height: 147rpx;
+  background-color: #00a6ff;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
-  font-size: 25rpx;
+}
+
+.code_title_logo {
+  width: 298rpx;
+  height: 52rpx;
+}
+
+.code {
+  /* width: 362rpx;
+  height: 362rpx;
+  background-color: #ebebeb; */
+  margin: 58rpx auto 37rpx;
+}
+
+.code_img {
+  /* width: 100%;
+  height: 100%; */
+  margin: 0 auto;
+}
+
+.code_info {
+  color: #000;
+}
+
+.code_info_count {
+  font-size: 36rpx;
+}
+
+.code_info_title {
+  font-size: 24rpx;
+}
+
+.code_btn {
+  margin: 70rpx 47rpx 46rpx;
+  font-size: 24rpx;
+  background-color: #fff;
+  height: 85rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.code_btn_hover {
+  background-color: #f0f0f0;
+}
+
+/* 商品列表 */
+
+.goodsList {
+  box-sizing: border-box;
+  width: 100%;
+  /* margin-top: -22rpx; */
+  padding-left: 24rpx;
+  padding-right: 24rpx;
+  background-color: #fff;
+  max-height: 464rpx;
+  position: absolute;
+  top: 84rpx;
+  left: 0;
+  z-index: 11;
+  /* margin-left: -24rpx;
+  margin-right: -24rpx; */
+}
+
+.goodsList .input {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: flex-end !important;
+}
+
+.goodsList .van-stepper {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: flex-end !important;
+}
+
+.item_wrap {
+  margin-top: 92rpx;
+}
+
+/* 商品列表的mask */
+
+.goodsList_mask {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+/* 商品列表的搜索 */
+
+.goodsListSearch {
+  height: 66rpx;
+  background-color: #f5f5f5;
+  border-radius: 5rpx;
+  display: flex;
+  align-items: center;
+  margin-top: 15rpx;
+  margin-bottom: 15rpx;
+  padding-left: 15rpx;
+  padding-right: 15rpx;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.goodsListSearch_input {
+  flex: 1 0 0;
+  width: 0;
+  height: 100%;
+  padding-left: 15rpx;
+}
+
+/* 获取验证码 */
+
+.getSmsBtn {
+  color: #00a6ff;
 }
