--- a/pages/renchou/renchou.wxss
+++ b/pages/renchou/renchou.wxss
@@ -1,7 +1,15 @@
 @import '../../utils/utils.wxss';
 
 Page {
+  height: 100%;
+  overflow: hidden;
   background-color: #f5f5f5;
+}
+
+.renchou_page {
+  height: 100%;
+  overflow-y: auto;
+  position: relative;
 }
 
 .item.title {
@@ -11,22 +19,23 @@ Page {
 .rect {
   width: 12rpx;
   height: 40rpx;
-  background-color: #00A6FF;
+  background-color: #00a6ff;
   margin-right: 12rpx;
 }
 
 .container {
-  padding-left: 24rpx;
-  padding-right: 24rpx;
   margin: 24rpx 0;
   background-color: #fff;
 }
 
 .item {
+  padding-left: 24rpx;
+  padding-right: 24rpx;
   height: 84rpx;
   border-bottom: 1rpx solid #d7d6d6;
   display: flex;
   align-items: center;
+  background-color: #fff;
 }
 
 .item:last-child {
@@ -34,9 +43,7 @@ Page {
 }
 
 .label {
-  width: 99rpx;
-  text-align: justify;
-  text-align-last: justify;
+  width: 139rpx;
   color: #000;
 }
 
@@ -99,7 +106,7 @@ Page {
 
 .btn {
   box-sizing: content-box;
-  background-color: #00A6FF;
+  background-color: #00a6ff;
   color: #fff;
   position: fixed;
   left: 0;
@@ -139,7 +146,7 @@ Page {
 
 .code_title {
   height: 147rpx;
-  background-color: #00A6FF;
+  background-color: #00a6ff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -199,7 +206,12 @@ Page {
   padding-right: 24rpx;
   background-color: #fff;
   max-height: 464rpx;
-  position: relative;
+  position: absolute;
+  top: 84rpx;
+  left: 0;
+  z-index: 11;
+  /* margin-left: -24rpx;
+  margin-right: -24rpx; */
 }
 
 .goodsList .input {
@@ -216,6 +228,18 @@ Page {
 
 .item_wrap {
   margin-top: 92rpx;
+}
+
+/* 商品列表的mask */
+
+.goodsList_mask {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 10;
 }
 
 /* 商品列表的搜索 */
@@ -241,4 +265,10 @@ Page {
   width: 0;
   height: 100%;
   padding-left: 15rpx;
+}
+
+/* 获取验证码 */
+
+.getSmsBtn {
+  color: #00a6ff;
 }
